[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/tilth_project_tracker/tilth/assets/icons/outline_mode_edit_black_24dp.png" type="Texture" id=1]
[ext_resource path="res://addons/tilth_project_tracker/tilth/assets/icons/outline_open_in_new_black_24dp.png" type="Texture" id=2]
[ext_resource path="res://addons/tilth_project_tracker/tilth/fonts/source_sans_pro/bold-18.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/project/project_list_item.gd" type="Script" id=4]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/project/project_crud/project_crud_popup.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.690196, 0.745098, 0.772549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.501961, 0.552941, 0.580392, 1 )

[node name="ProjectPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
project_scene = "res://addons/tilth_project_tracker/tilth/scenes/project/project_board.tscn"

[node name="Padding" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HLayout" type="HBoxContainer" parent="Padding"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0

[node name="VLayout" type="VBoxContainer" parent="Padding/HLayout"]
margin_right = 36.0
margin_bottom = 590.0

[node name="OpenButton" type="Button" parent="Padding/HLayout/VLayout"]
margin_right = 36.0
margin_bottom = 30.0
size_flags_vertical = 0
icon = ExtResource( 2 )

[node name="EditButton" type="Button" parent="Padding/HLayout/VLayout"]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 64.0
icon = ExtResource( 1 )

[node name="DivPanel" type="Panel" parent="Padding/HLayout"]
margin_left = 40.0
margin_right = 45.0
margin_bottom = 590.0
rect_min_size = Vector2( 5, 0 )
custom_styles/panel = SubResource( 2 )

[node name="Rows" type="VBoxContainer" parent="Padding/HLayout"]
margin_left = 49.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3

[node name="ProjectName" type="Label" parent="Padding/HLayout/Rows"]
margin_right = 965.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
text = "Project name"

[node name="ProjectDescription" type="Label" parent="Padding/HLayout/Rows"]
margin_top = 27.0
margin_right = 965.0
margin_bottom = 41.0
text = "Project desription"

[node name="ProjectCrudPopup" parent="." instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
window_title = "Create project"
